Fix quick edit Date pickers alignment

--- a/agenda-webapps/src/main/webapp/skin/less/agenda.less
+++ b/agenda-webapps/src/main/webapp/skin/less/agenda.less
@@ -174,9 +174,15 @@
     }
   }
 
-  .datePickerComponent::after {
-    display: none;
+  .datePickerComponent {
+    &::after {
+      display: none;
+    }
+    input {
+      margin: auto;
+    }
   }
+
   .datePickerText {
     width: auto;
     min-width: auto;
